--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -7,30 +7,30 @@ main:
     url: https://github.com/cortexjs
 
 docs:
-  - title: "Getting Started"
+  # - title: "Getting Started"
+  #   children:
+  #     - title: "Quick-Start Guide"
+  #       url: "/docs/quick-start-guide"
+  #     - title: "Installation"
+  #       url: /docs/installation/
+  - title: "Mathlive"
     children:
-      - title: "Quick-Start Guide"
-        url: "/docs/quick-start-guide"
-      - title: "Installation"
-        url: /docs/installation/
-  - title: "Mathfield"
-    children:
-      - title: "Quick-Start Guide"
-        url: "/docs/mathfield/quick-start-guide"
-      - title: "APIs"
-        url: /docs/mathfield/api/
-  - title: "Compute Engine"
-    children:
-      - title: "Quick-Start Guide"
-        url: "/docs/compute_engine/quick-start-guide"
-      - title: "APIs"
-        url: /docs/compute_engine/api/
-  - title: "Visual"
-    children:
-      - title: "Quick-Start Guide"
-        url: "/docs/visual/quick-start-guide"
-      - title: "APIs"
-        url: /docs/visual/api/
+      # - title: "Quick-Start Guide"
+      #   url: "/docs/mathfield-quick-start-guide"
+      - title: "API Reference"
+        url: /docs/mathlive/
+  # - title: "Compute Engine"
+  #   children:
+  #     - title: "Quick-Start Guide"
+  #       url: "/docs/compute_engine/quick-start-guide"
+  #     - title: "APIs"
+  #       url: /docs/compute_engine/api/
+  # - title: "Visual"
+  #   children:
+  #     - title: "Quick-Start Guide"
+  #       url: "/docs/visual/quick-start-guide"
+  #     - title: "APIs"
+  #       url: /docs/visual/api/
   - title: "Contributing"
     children:
       - title: "How to contribute"
