--- a/_config.yml
+++ b/_config.yml
@@ -40,9 +40,9 @@ search                   : true # true, false (default)
 search_full_content      : # true, false (default)
 search_provider          : # lunr (default), algolia, google
 algolia:
-  application_id         : # YOUR_APPLICATION_ID
-  index_name             : # YOUR_INDEX_NAME
-  search_only_api_key    : # YOUR_SEARCH_ONLY_API_KEY
+  application_id         : KMTUVCFSPQ # YOUR_APPLICATION_ID
+  index_name             : cortex # YOUR_INDEX_NAME
+  search_only_api_key    : d709345cb7b4012f84f5c836a9dfa03f # YOUR_SEARCH_ONLY_API_KEY
   powered_by             : # true (default), false
 google:
   search_engine_id       : # YOUR_SEARCH_ENGINE_ID
