--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
   "main": "root/index.html",
   "scripts": {
     "build": "bash script/build",
-    "clean": "",
-    "deploy": "",
-    "test": "",
-    "start": "bash script/server"
+    "clean": "bash script/clean",
+    "deploy": "bash script/deploy",
+    "stage": "bash script/stage",
+    "start": "bash script/server",
+    "test": "bash script/test"
   },
   "engines": {
     "node": ">=8.0"
