--- a/_config.yml
+++ b/_config.yml
@@ -106,6 +106,9 @@ author:
 # Site Footer
 footer:
   links:
+    - label: "Gitter"
+      icon: "fab fa-fw fa-gitter"
+      url: "https://gitter.im/cortex-js"
     - label: "Twitter"
       icon: "fab fa-fw fa-twitter-square"
       # url:
@@ -143,7 +146,7 @@ exclude:
   - .bundle
   - .jekyll-assets-cache
   - .sass-cache
-  - .ruby-version.txt
+  - .ruby-version
   - assets/js/plugins
   - assets/js/_main.js
   - assets/js/vendor
