Added prettier support. Improved build system.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,9 +11,7 @@
             "program": "${workspaceFolder}/script/makedoc.js",
             "args": ["_data/mathfield.json"],
             "cwd": "${workspaceFolder}",
-            "outFiles": [
-                "${workspaceFolder}/**/*.js"
-            ]
+            "outFiles": ["${workspaceFolder}/**/*.js"]
         }
     ]
 }
