--- a/_config.yml
+++ b/_config.yml
@@ -5,48 +5,50 @@
 # For technical reasons, this file is *NOT* reloaded automatically when you use
 # `jekyll serve`. If you change this file, please restart the server process.
 
+destination: submodules/cortex-js.github.io
+
 # Theme Settings
 #
 # Review documentation to determine if you should use `theme` or `remote_theme`
 # https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/#installing-the-theme
 
-theme: "minimal-mistakes-jekyll"
+theme: 'minimal-mistakes-jekyll'
 # remote_theme           : "mmistakes/minimal-mistakes"
-minimal_mistakes_skin: "contrast" # "default" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
+minimal_mistakes_skin: 'contrast' # "default" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
 
 # Site Settings
-locale: "en-US"
-title: "CortexJS"
-title_separator: "-"
+locale: 'en-US'
+title: 'CortexJS'
+title_separator: '-'
 # subtitle                 : "Web Components for Scientific Computing" # site tagline that appears below site title in masthead
-name: "CortexJS"
-description: "Web components for scientific computing."
+name: 'CortexJS'
+description: 'Web components for scientific computing.'
 url: https://cortexjs.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl: # the subpath of your site, e.g. "/blog"
 repository: cortex-js/cortexjs.io # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser: # path of fallback teaser image, e.g. "/assets/images/500x300.png"
 # logo                     : /assets/images/cortex-logo.svg # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
-masthead_title: "CortexJS" # overrides the website title displayed in the masthead, use " " for no title
+masthead_title: 'CortexJS' # overrides the website title displayed in the masthead, use " " for no title
 breadcrumbs: true # true, false (default)
 words_per_minute: 200
 comments:
-  provider: # false (default), "disqus", "discourse", "facebook", "staticman", "staticman_v2", "utterances", "custom"
+    provider: # false (default), "disqus", "discourse", "facebook", "staticman", "staticman_v2", "utterances", "custom"
 reCaptcha:
-  siteKey:
-  secret:
+    siteKey:
+    secret:
 atom_feed:
-  path: # blank (default) uses feed.xml
+    path: # blank (default) uses feed.xml
 search: false # true, false (default)
 search_full_content: # true, false (default)
 search_provider: # lunr (default), algolia, google
 algolia:
-  application_id: KMTUVCFSPQ # YOUR_APPLICATION_ID
-  index_name: cortex # YOUR_INDEX_NAME
-  search_only_api_key: d709345cb7b4012f84f5c836a9dfa03f # YOUR_SEARCH_ONLY_API_KEY
-  powered_by: # true (default), false
+    application_id: KMTUVCFSPQ # YOUR_APPLICATION_ID
+    index_name: cortex # YOUR_INDEX_NAME
+    search_only_api_key: d709345cb7b4012f84f5c836a9dfa03f # YOUR_SEARCH_ONLY_API_KEY
+    powered_by: # true (default), false
 google:
-  search_engine_id: # YOUR_SEARCH_ENGINE_ID
-  instant_search: # false (default), true
+    search_engine_id: # YOUR_SEARCH_ENGINE_ID
+    instant_search: # false (default), true
 # SEO Related
 google_site_verification:
 bing_site_verification:
@@ -55,117 +57,118 @@ naver_site_verification:
 
 # Social Sharing
 twitter:
-  username:
+    username:
 facebook:
-  username:
-  app_id:
-  publisher:
+    username:
+    app_id:
+    publisher:
 og_image: # Open Graph/Twitter default site image
 # For specifying social profiles
 # - https://developers.google.com/structured-data/customize/social-profiles
 social:
-  type: Organization # Person or Organization (defaults to Person)
-  name: CortexJS # If the user or organization name differs from the site's name
-  links: # An array of links to social media profiles
+    type: Organization # Person or Organization (defaults to Person)
+    name: CortexJS # If the user or organization name differs from the site's name
+    links: # An array of links to social media profiles
 
 # Analytics
 analytics:
-  provider: false # false (default), "google", "google-universal", "custom"
-  google:
-    tracking_id:
-    anonymize_ip: # true, false (default)
+    provider: false # false (default), "google", "google-universal", "custom"
+    google:
+        tracking_id:
+        anonymize_ip: # true, false (default)
 
 # Site Author
 author:
-  name: "Arno Gourdol"
-  avatar: # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio: ""
-  location: "San Francisco"
-  email:
-  links:
-    - label: "Email"
-      icon: "fas fa-fw fa-envelope-square"
-      url: mailto:info@cortexjs.io
-    - label: "Website"
-      icon: "fas fa-fw fa-link"
-      # url: "https://your-website.com"
-    - label: "Twitter"
-      icon: "fab fa-fw fa-twitter-square"
-      # url: "https://twitter.com/"
-    - label: "Facebook"
-      icon: "fab fa-fw fa-facebook-square"
-      # url: "https://facebook.com/"
-    - label: "GitHub"
-      icon: "fab fa-fw fa-github"
-      url: "https://github.com/cortex-js"
-    - label: "Instagram"
-      icon: "fab fa-fw fa-instagram"
-      # url: "https://instagram.com/"
+    name: 'Arno Gourdol'
+    avatar: # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
+    bio: ''
+    location: 'San Francisco'
+    email:
+    links:
+        - label: 'Email'
+          icon: 'fas fa-fw fa-envelope-square'
+          url: mailto:info@cortexjs.io
+        - label: 'Website'
+          icon: 'fas fa-fw fa-link'
+          # url: "https://your-website.com"
+        - label: 'Twitter'
+          icon: 'fab fa-fw fa-twitter-square'
+          # url: "https://twitter.com/"
+        - label: 'Facebook'
+          icon: 'fab fa-fw fa-facebook-square'
+          # url: "https://facebook.com/"
+        - label: 'GitHub'
+          icon: 'fab fa-fw fa-github'
+          url: 'https://github.com/cortex-js'
+        - label: 'Instagram'
+          icon: 'fab fa-fw fa-instagram'
+          # url: "https://instagram.com/"
 
 # Site Footer
 footer:
-  links:
-    - label: "Gitter"
-      icon: "fab fa-fw fa-gitter"
-      url: "https://gitter.im/cortex-js"
-    - label: "Twitter"
-      icon: "fab fa-fw fa-twitter-square"
-      # url:
-    - label: "Facebook"
-      icon: "fab fa-fw fa-facebook-square"
-      # url:
-    - label: "GitHub"
-      icon: "fab fa-fw fa-github"
-      # url:
-    - label: "GitLab"
-      icon: "fab fa-fw fa-gitlab"
-      # url:
-    - label: "Bitbucket"
-      icon: "fab fa-fw fa-bitbucket"
-      # url:
-    - label: "Instagram"
-      icon: "fab fa-fw fa-instagram"
-      # url:
+    links:
+        - label: 'Gitter'
+          icon: 'fab fa-fw fa-gitter'
+          url: 'https://gitter.im/cortex-js'
+        - label: 'Twitter'
+          icon: 'fab fa-fw fa-twitter-square'
+          # url:
+        - label: 'Facebook'
+          icon: 'fab fa-fw fa-facebook-square'
+          # url:
+        - label: 'GitHub'
+          icon: 'fab fa-fw fa-github'
+          # url:
+        - label: 'GitLab'
+          icon: 'fab fa-fw fa-gitlab'
+          # url:
+        - label: 'Bitbucket'
+          icon: 'fab fa-fw fa-bitbucket'
+          # url:
+        - label: 'Instagram'
+          icon: 'fab fa-fw fa-instagram'
+          # url:
 
 # Reading Files
 include:
-  - .htaccess
-  - _pages
+    - .htaccess
+    - _pages
 keep_files:
-  - CNAME
-  - .nojekyll
-  - .git
-  - .svn
+    - CNAME
+    - .nojekyll
+    - .git
+    - .svn
 exclude:
-  - "*.sublime-project"
-  - "*.sublime-workspace"
-  - vendor
-  - .asset-cache
-  - .bundle
-  - .jekyll-assets-cache
-  - .sass-cache
-  - .ruby-version
-  - assets/js/plugins
-  - assets/js/_main.js
-  - assets/js/vendor
-  - Capfile
-  - CHANGELOG
-  - config
-  - Gemfile
-  - Gruntfile.js
-  - gulpfile.js
-  - LICENSE
-  - log
-  - node_modules
-  - package.json
-  - package-lock.json
-  - Rakefile
-  - README
-  - tmp
-  - script
-  - /test # ignore Minimal Mistakes /test
-encoding: "utf-8"
-markdown_ext: "markdown,mkdown,mkdn,mkd,md"
+    - '*.sublime-project'
+    - '*.sublime-workspace'
+    - vendor
+    - .asset-cache
+    - .bundle
+    - .jekyll-assets-cache
+    - .sass-cache
+    - .ruby-version
+    - assets/js/plugins
+    - assets/js/_main.js
+    - assets/js/vendor
+    - Capfile
+    - CHANGELOG
+    - config
+    - Gemfile
+    - Gruntfile.js
+    - gulpfile.js
+    - LICENSE
+    - log
+    - node_modules
+    - package.json
+    - package-lock.json
+    - Rakefile
+    - README
+    - tmp
+    - scripts
+    - submodules
+    - /test # ignore Minimal Mistakes /test
+encoding: 'utf-8'
+markdown_ext: 'markdown,mkdown,mkdn,mkd,md'
 
 # Conversion
 markdown: kramdown
@@ -176,20 +179,20 @@ incremental: false
 
 # Markdown Processing
 kramdown:
-  input: GFM
-  hard_wrap: false
-  auto_ids: false
-  footnote_nr: 1
-  entity_output: as_char
-  toc_levels: 1..2
-  enable_coderay: false
-  smart_quotes: lsquo,rsquo,ldquo,rdquo
-  # smart_quotes: ["apos", "apos", "quot", "quot"]
+    input: GFM
+    hard_wrap: false
+    auto_ids: false
+    footnote_nr: 1
+    entity_output: as_char
+    toc_levels: 1..2
+    enable_coderay: false
+    smart_quotes: lsquo,rsquo,ldquo,rdquo
+    # smart_quotes: ["apos", "apos", "quot", "quot"]
 
 # Sass/SCSS
 sass:
-  sass_dir: _sass
-  style: compressed # https://sass-lang.com/documentation/file.SASS_REFERENCE.html#output_style
+    sass_dir: _sass
+    style: compressed # https://sass-lang.com/documentation/file.SASS_REFERENCE.html#output_style
 
 # Outputting
 # permalink: /:categories/:title/
@@ -199,22 +202,22 @@ timezone: America/Los_Angeles # https://en.wikipedia.org/wiki/List_of_tz_databas
 
 # Plugins (previously gems:)
 plugins:
-  - jekyll-paginate
-  - jekyll-sitemap
-  - jekyll-gist
-  - jekyll-feed
-  - jekyll-include-cache
+    - jekyll-paginate
+    - jekyll-sitemap
+    - jekyll-gist
+    - jekyll-feed
+    - jekyll-include-cache
 
 # mimic GitHub Pages with --safe
 whitelist:
-  - jekyll-paginate
-  - jekyll-sitemap
-  - jekyll-gist
-  - jekyll-feed
-  - jekyll-include-cache
+    - jekyll-paginate
+    - jekyll-sitemap
+    - jekyll-gist
+    - jekyll-feed
+    - jekyll-include-cache
 
 footer_scripts:
-  - assets/js/main.min.js
+    - assets/js/main.min.js
 
 # Archives
 #  Type
@@ -227,11 +230,11 @@ footer_scripts:
 #  - <base_path>/categories/my-awesome-category/index.html ~> path: /categories/
 #  - <base_path>/my-awesome-category/index.html ~> path: /
 category_archive:
-  type: liquid
-  path: /categories/
+    type: liquid
+    path: /categories/
 tag_archive:
-  type: liquid
-  path: /tags/
+    type: liquid
+    path: /tags/
 # https://github.com/jekyll/jekyll-archives
 # jekyll-archives:
 #   enabled:
@@ -247,37 +250,37 @@ tag_archive:
 # HTML Compression
 # - https://jch.penibelst.de/
 compress_html:
-  clippings: all
-  ignore:
-    envs: development
+    clippings: all
+    ignore:
+        envs: development
 
 # Defaults
 defaults:
-  - scope:
-      path: ""
-      type: "pages"
-    values:
-      layout: "single"
-      author_profile: false
-      read_time: true
-      comments: false # true
-      share: false
-      related: true
-  - scope:
-      path: "api-docs" # .md files generated from .d.ts
-      type: pages
-    values:
-      layout: typescript-doc
-      read_time: false
-      related: false
-      sidebar:
-        nav: "docs"
-  - scope:
-      path: "docs" # manually authored Guides, etc...
-      type: pages
-    values:
-      layout: single
-      read_time: false
-      related: false
-      sidebar:
-        nav: "docs"
+    - scope:
+          path: ''
+          type: 'pages'
+      values:
+          layout: 'single'
+          author_profile: false
+          read_time: true
+          comments: false # true
+          share: false
+          related: true
+    - scope:
+          path: 'api-docs' # .md files generated from .d.ts
+          type: pages
+      values:
+          layout: typescript-doc
+          read_time: false
+          related: false
+          sidebar:
+              nav: 'docs'
+    - scope:
+          path: 'docs' # manually authored Guides, etc...
+          type: pages
+      values:
+          layout: single
+          read_time: false
+          related: false
+          sidebar:
+              nav: 'docs'
