--- a/package.json
+++ b/package.json
@@ -10,14 +10,14 @@
     "keywords": [],
     "main": "root/index.html",
     "scripts": {
-        "build": "bash script/build",
-        "clean": "bash script/clean",
-        "deploy": "bash script/deploy",
+        "build": "bash scripts/build",
+        "clean": "bash scripts/clean",
+        "deploy": "bash scripts/deploy",
         "lint": "prettier --ignore-path ./.prettierignore --write \"**/*.{ts,js,css,md,yml,json}\" \"!vendor/**\"",
         "restart": "bash scripts/restart",
-        "stage": "bash script/stage",
-        "start": "bash script/server",
-        "test": "bash script/test"
+        "stage": "bash scripts/stage",
+        "start": "bash scripts/server",
+        "test": "bash scripts/test"
     },
     "engines": {
         "node": ">=8.0"
