--- a/scripts/build
+++ b/scripts/build
@@ -9,28 +9,28 @@ cd "$(dirname "$0")/.."
 
 # Remove the CNAME file, which is used
 # to indicate if this is a production or development build
-[ -f "_site/CNAME" ] && rm "_site/CNAME"
-
-# GC customizations
-export RUBY_GC_MALLOC_LIMIT=79000000
-export RUBY_HEAP_MIN_SLOTS=800000
-export RUBY_HEAP_FREE_MIN=100000
-export RUBY_HEAP_SLOTS_INCREMENT=400000
-export RUBY_HEAP_SLOTS_GROWTH_FACTOR=1
+[ -f "./submodules/cortex-js.github.io/CNAME" ] && rm "./submodules/cortex-js.github.io/CNAME"
 
 ## Preprocess
 
 # Typedoc doesn't handle optional parameters in JSDOC, so strip them
 # See https://github.com/TypeStrong/typedoc/issues/567
 
-# **NOTE**: the .d.ts file is modified in place. Would be better to use pipelining
-# or perhaps the <() bash operator.
-
-sed -i -r 's/@param\(.*\)\[\([^=]+\)=\(.+\)\]/@param\1\2/g' node_modules/mathlive/dist/mathlive.d.ts
-sed -i -r 's/@param\(.*\)\[\(.+\)\]/@param\1\2/g' node_modules/mathlive/dist/mathlive.d.ts   
+sed -E -e 's/@param(.*)\[([^=]+)=(.+)\]/@param\1\2/g' \
+    node_modules/mathlive/dist/mathlive.d.ts | \
+sed -E -e 's/@param(.*)\[(.+)\]/@param\1\2/g' > \
+    node_modules/mathlive/dist/mathlive.proc.d.ts 
 
 ## Typedoc (.d.ts -> .json)
-npx typedoc --mode modules --includeDeclarations --excludeExternals --excludePrivate --excludeProtected --hideGenerator --readme none --json _data/mathfield.json node_modules/mathlive/dist/mathlive.d.ts
+npx typedoc --mode modules \
+    --includeDeclarations \
+    --excludeExternals \
+    --excludePrivate \
+    --excludeProtected \
+    --hideGenerator \
+    --readme none \
+    --json _data/mathfield.json \
+    node_modules/mathlive/dist/mathlive.proc.d.ts
 
 ## Makedoc (.json -> .md)
 ./scripts/makedoc _data/mathfield.json
