--- a/_config.yml
+++ b/_config.yml
@@ -192,7 +192,7 @@ kramdown:
 # Sass/SCSS
 sass:
     sass_dir: _sass
-    style: compressed # https://sass-lang.com/documentation/file.SASS_REFERENCE.html#output_style
+    style: expanded # https://sass-lang.com/documentation/file.SASS_REFERENCE.html#output_style
 
 # Outputting
 # permalink: /:categories/:title/
