--- a/package.json
+++ b/package.json
@@ -10,14 +10,14 @@
     "keywords": [],
     "main": "root/index.html",
     "scripts": {
-        "build": "bash scripts/build",
-        "clean": "bash scripts/clean",
-        "deploy": "bash scripts/deploy",
-        "lint": "prettier --ignore-path ./.prettierignore --write \"**/*.{ts,js,css,md,yml,json}\" \"!vendor/**\"",
-        "restart": "bash scripts/restart",
-        "stage": "bash scripts/stage",
-        "start": "bash scripts/server",
-        "test": "bash scripts/test"
+        "build": "bash scripts/build.sh",
+        "clean": "bash scripts/clean.sh",
+        "deploy": "bash scripts/deploy.sh",
+        "lint": "prettier --config .config/prettierrc.yaml--ignore-path ./.prettierignore --write \"**/*.{ts,js,css,md,yml,json}\" \"!vendor/**\"",
+        "restart": "bash scripts/restart.sh",
+        "stage": "bash scripts/stage.sh",
+        "start": "bash scripts/server.sh",
+        "test": "bash scripts/test.sh"
     },
     "engines": {
         "node": ">=8.0"
@@ -31,13 +31,15 @@
     "bugs": "https://github.com/cortex-js/cortexjs.io/issues/",
     "devDependencies": {
         "@cortex-js/prettier-config": "^1.0.0",
+        "cssnano": "^4.1.10",
         "husky": "^3.0.9",
         "lint-staged": "^9.4.3",
+        "postcss-cli": "^6.1.3",
         "prettier": "^1.19.1"
     },
     "dependencies": {
-        "mathlive": "^0.32.3",
-        "typedoc": "^0.15.0"
+        "mathlive": "^0.32.8",
+        "typedoc": "^0.15.2"
     },
     "prettier": "@cortex-js/prettier-config",
     "husky": {
