--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,5 @@
-* text eol=lf
+*                 text eol=lf
+*.bash            text eol=lf
+*.css             text eol=lf
+*.ts              text eol=lf
+*.js              text eol=lf
