--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,120 @@
-*                 text eol=lf
-*.bash            text eol=lf
-*.css             text eol=lf
-*.ts              text eol=lf
-*.js              text eol=lf
+# Normalize text files line ending to LF in the repository
+* text=auto
+
+# Text files
+*.css      text
+*.hbs      text             # Handlebars template
+*.htm      text diff=html
+*.html     text diff=html
+*.js       text
+*.json     text
+*.jsx      text
+*.liquid   text             # Liquid template
+*.map      text -diff
+*.md       text             # Markdown
+*.sass     text diff=css
+*.scss     text diff=css
+*.sh       text eol=lf      # shell script, always LF
+*.svg      text
+*.ts       text
+*.tsx      text
+*.yaml     text
+*.yml      text
+
+# Text files without extension
+AUTHORS*          text
+CHANGELOG*        text
+CHANGES           text
+CONTRIBUTING*     text
+COPYING           text
+copyright         text
+*COPYRIGHT*       text
+INSTALL*          text
+license           text
+LICENSE*          text
+NEWS              text
+readme            text
+*README*          text
+TODO              text
+
+# Configuration files
+*.bowerrc         text
+*.cnf             text
+*.conf            text
+*.config          text
+.babelrc          text
+.browserslistrc   text
+.editorconfig     text
+.env              text
+.gitattributes    text
+.gitconfig        text
+.htaccess         text
+*.lock            text -diff
+package-lock.json text -diff
+*.npmignore       text
+*.yaml            text
+*.yml             text
+browserslist      text
+Makefile          text
+makefile          text
+
+
+# Configuration files without extensions
+.csslintrc        text
+.eleventyignore   text
+.editorconfig     text
+.eslintrc         text
+.gitignore        text
+.gitmodules       text
+.htmlhintrc       text
+.prettierignore   text
+.jscsrc           text
+.jshintrc         text
+.jshintignore     text
+.stylelintrc      text
+
+
+# Graphics
+*.gif             binary
+*.ico             binary
+*.jpg             binary
+*.jpeg            binary
+*.png             binary
+
+# Video
+*.3gpp            binary
+*.3gp             binary
+*.as              binary
+*.asf             binary
+*.asx             binary
+*.fla             binary
+*.flv             binary
+*.m4v             binary
+*.mng             binary
+*.mov             binary
+*.mp4             binary
+*.mpeg            binary
+*.mpg             binary
+*.ogv             binary
+*.swc             binary
+*.swf             binary
+*.webm            binary
+
+# Fonts
+*.ttf             binary
+*.eot             binary
+*.otf             binary
+*.woff            binary
+*.woff2           binary
+
+#
+# Exclude files from exporting
+# (used by the "download ZIP archive" option, for example)
+#
+
+.eleventyignore      export-ignore
+.gitattributes       export-ignore
+.gitignore           export-ignore
+.gitmodules          export-ignore
+.prettierignore      export-ignore
+.package-lock.json   export-ignore
