--- a/package.json
+++ b/package.json
@@ -38,19 +38,20 @@
     "contributors": [],
     "bugs": "https://github.com/cortex-js/cortexjs.io/issues/",
     "devDependencies": {
-        "@11ty/eleventy": "^0.9.0",
+        "@11ty/eleventy": "^0.10.0",
         "@cortex-js/prettier-config": "^1.0.0",
         "cssnano": "^4.1.10",
-        "husky": "^3.1.0",
-        "lint-staged": "^9.5.0",
+        "husky": "^4.2.3",
+        "lint-staged": "^10.1.2",
         "markdown-it-deflist": "^2.0.3",
-        "node-sass": "^4.13.0",
-        "postcss-cli": "^6.1.3",
-        "prettier": "^1.19.1"
+        "node-sass": "^4.13.1",
+        "postcss-cli": "^7.1.0",
+        "prettier": "^2.0.3",
+        "typedoc": "^0.17.3",
+        "typescript": "^3.8.3"
     },
     "dependencies": {
-        "mathlive": "^0.33.2",
-        "typedoc": "^0.15.5"
+        "mathlive": "^0.35.1"
     },
     "prettier": "@cortex-js/prettier-config",
     "husky": {
