--- a/package.json
+++ b/package.json
@@ -41,16 +41,17 @@
         "@11ty/eleventy": "^0.10.0",
         "@cortex-js/prettier-config": "^1.0.0",
         "cssnano": "^4.1.10",
-        "husky": "^4.2.3",
-        "lint-staged": "^10.1.2",
+        "husky": "^4.2.5",
+        "lint-staged": "^10.2.0",
         "markdown-it-deflist": "^2.0.3",
-        "node-sass": "^4.13.1",
-        "postcss-cli": "^7.1.0",
-        "prettier": "^2.0.3",
-        "typedoc": "^0.17.3",
+        "node-sass": "^4.14.0",
+        "postcss-cli": "^7.1.1",
+        "prettier": "^2.0.5",
+        "typedoc": "^0.17.6",
         "typescript": "^3.8.3"
     },
     "dependencies": {
+        "@ui-js/grok": "file:submodules/grok",
         "mathlive": "^0.35.1"
     },
     "prettier": "@cortex-js/prettier-config",
