--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "scripts": {
         "build": "bash scripts/build.sh",
         "build:grok": "npm --prefix node_modules/@ui-js/grok run build",
+        "install:grok": "npm --prefix node_modules/@ui-js/grok install",
         "clean": "bash scripts/clean.sh",
         "coverage": "bash scripts/test.sh --coverage",
         "deploy": "bash scripts/deploy.sh",
@@ -44,7 +45,7 @@
         "@cortex-js/prettier-config": "^1.0.0",
         "cssnano": "^4.1.10",
         "husky": "^4.2.5",
-        "lint-staged": "^10.2.1",
+        "lint-staged": "^10.2.2",
         "markdown-it-deflist": "^2.0.3",
         "node-sass": "^4.14.0",
         "postcss-cli": "^7.1.1",
