--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -19,11 +19,11 @@
             "type": "node",
             "skipFiles": ["<node_internals>/**"],
             "program": "${workspaceFolder}/submodules/grok/bin/grok-cli",
-            "outFiles": ["${workspaceFolder}/**/*.js"],
+            "outFiles": ["${workspaceFolder}/submodules/grok/bin/*.js"],
             "preLaunchTask": "npm: build:grok",
             "args": [
-                // "../mathlive/mathlive/dist/",
-                "${workspaceFolder}/test.d.ts/",
+                "../mathlive/dist/public/",
+                // "${workspaceFolder}/test.d.ts/",
                 "--outDir",
                 "./build",
                 "--verbose",
