--- a/package.json
+++ b/package.json
@@ -44,18 +44,19 @@
         "@11ty/eleventy": "^0.11.0",
         "@cortex-js/prettier-config": "^1.0.0",
         "cssnano": "^4.1.10",
-        "husky": "^4.2.5",
-        "lint-staged": "^10.2.11",
-        "markdown-it-deflist": "^2.0.3",
+        "husky": "^4.3.0",
+        "lint-staged": "^10.4.0",
+        "markdown-it": "^11.0.1",
+        "markdown-it-deflist": "^2.1.0",
         "node-sass": "^4.14.1",
-        "postcss-cli": "^7.1.1",
-        "prettier": "^2.0.5",
-        "typedoc": "^0.18.0",
-        "typescript": "^3.9.7"
+        "postcss-cli": "^7.1.2",
+        "prettier": "^2.1.2",
+        "typedoc": "^0.19.2",
+        "typescript": "^4.0.3"
     },
     "dependencies": {
         "@ui-js/grok": "file:submodules/grok",
-        "mathlive": "^0.54.1"
+        "markdown-it-attrs": "^3.0.3"
     },
     "prettier": "@cortex-js/prettier-config",
     "husky": {
