--- a/package.json
+++ b/package.json
@@ -42,23 +42,23 @@
     "contributors": [],
     "bugs": "https://github.com/cortex-js/cortexjs.io/issues/",
     "devDependencies": {
-        "@11ty/eleventy": "^0.11.0",
+        "@11ty/eleventy": "^0.11.1",
         "@cortex-js/prettier-config": "^1.0.0",
-        "cssnano": "^4.1.10",
-        "husky": "^4.3.0",
-        "lint-staged": "^10.4.0",
-        "markdown-it": "^11.0.1",
-        "markdown-it-deflist": "^2.1.0",
-        "node-sass": "^4.14.1",
-        "postcss-cli": "^7.1.2",
-        "prettier": "^2.1.2",
-        "typedoc": "^0.19.2",
-        "typescript": "^4.0.3"
-    },
-    "dependencies": {
         "@ui-js/grok": "file:submodules/grok",
-        "markdown-it-attrs": "^3.0.3"
+        "cssnano": "^4.1.10",
+        "husky": "^4.3.6",
+        "lint-staged": "^10.5.3",
+        "markdown-it": "^12.0.3",
+        "markdown-it-attrs": "^3.0.3",
+        "markdown-it-deflist": "^2.1.0",
+        "node-sass": "^5.0.0",
+        "postcss": "^8.2.1",
+        "postcss-cli": "^8.3.1",
+        "prettier": "^2.2.1",
+        "typedoc": "^0.19.2",
+        "typescript": "^4.1.3"
     },
+    "dependencies": {},
     "prettier": "@cortex-js/prettier-config",
     "husky": {
         "hooks": {
