--- a/package.json
+++ b/package.json
@@ -43,20 +43,22 @@
     "bugs": "https://github.com/cortex-js/cortexjs.io/issues/",
     "devDependencies": {
         "@11ty/eleventy": "^0.11.1",
-        "@cortex-js/prettier-config": "^1.0.0",
+        "@cortex-js/prettier-config": "^1.1.0",
         "@ui-js/grok": "file:submodules/grok",
         "cssnano": "^4.1.10",
-        "husky": "^4.3.6",
+        "highlight.js": "^10.5.0",
+        "husky": "^4.3.8",
         "lint-staged": "^10.5.3",
-        "markdown-it": "^12.0.3",
-        "markdown-it-attrs": "^3.0.3",
+        "markdown-it": "^12.0.4",
+        "markdown-it-attrs": "^4.0.0",
         "markdown-it-deflist": "^2.1.0",
         "node-sass": "^5.0.0",
-        "postcss": "^8.2.1",
+        "postcss": "^8.2.4",
         "postcss-cli": "^8.3.1",
         "prettier": "^2.2.1",
-        "typedoc": "^0.19.2",
-        "typescript": "^4.1.3"
+        "typedoc": "^0.20.16",
+        "typescript": "^4.1.3",
+        "update-notifier": "^5.0.1"
     },
     "dependencies": {},
     "prettier": "@cortex-js/prettier-config",
