--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,7 @@
 	path = submodules/code-playground
 	url = https://github.com/ui-js/code-playground.git
 	branch = master
+[submodule "submodules/math-json"]
+	path = submodules/math-json
+	url = https://github.com/cortex-js/math-json.git
+	branch = master
