--- a/config/prettierrc.yaml
+++ b/config/prettierrc.yaml
@@ -1,5 +1,8 @@
 # .prettierrc or .prettierrc.yaml
-trailingComma: "es5"
-tabWidth: 4
-semi: false
+endOfLine: 'lf'
+proseWrap: 'always'
+trailingComma: 'es5'
+tabWidth: 2
+semi: true
 singleQuote: true
+useTabs: false
