--- a/package.json
+++ b/package.json
@@ -45,19 +45,19 @@
     "@11ty/eleventy": "^0.12.1",
     "@cortex-js/prettier-config": "^1.1.0",
     "@ui-js/grok": "file:submodules/grok",
-    "cssnano": "^4.1.10",
-    "highlight.js": "^10.7.1",
-    "husky": "<5.0.0",
-    "lint-staged": "^10.5.3",
-    "markdown-it": "^12.0.4",
+    "cssnano": "^5.0.4",
+    "highlight.js": "^10.7.2",
+    "husky": "^6.0.0",
+    "lint-staged": "^11.0.0",
+    "markdown-it": "^12.0.6",
     "markdown-it-attrs": "^4.0.0",
     "markdown-it-deflist": "^2.1.0",
-    "node-sass": "^5.0.0",
-    "postcss": "^8.2.8",
+    "node-sass": "^6.0.0",
+    "postcss": "^8.3.0",
     "postcss-cli": "^8.3.1",
-    "prettier": "^2.2.1",
-    "typedoc": "^0.20.34",
-    "typescript": "^4.1.3",
+    "prettier": "^2.3.0",
+    "typedoc": "^0.20.36",
+    "typescript": "^4.2.0",
     "update-notifier": "^5.1.0"
   },
   "prettier": "@cortex-js/prettier-config",
