chore: deps/security

--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
     "clean": "bash scripts/clean.sh",
     "coverage": "bash scripts/test.sh --coverage",
     "deploy": "bash scripts/deploy.sh",
-    "install": "npm install --production=false submodules/grok",
-    "lint": "prettier --config .config/prettierrc.yaml--ignore-path ./.prettierignore --write \"**/*.{ts,js,css,md,yml,json}\" \"!vendor/**\"",
+    "//install": "npm install --production=false submodules/grok",
+    "lint": "prettier --config config/prettierrc.yaml --ignore-path ./.prettierignore --write \"**/*.{ts,js,css,md,yml,json}\"",
     "restart": "bash scripts/restart.sh",
     "stage": "bash scripts/stage.sh",
     "start": "bash scripts/server.sh",
@@ -45,19 +45,19 @@
     "@11ty/eleventy": "^0.12.1",
     "@cortex-js/prettier-config": "^1.1.0",
     "@ui-js/grok": "file:submodules/grok",
-    "cssnano": "^5.0.6",
-    "highlight.js": "^11.0.1",
-    "husky": "^6.0.0",
-    "lint-staged": "^11.0.0",
-    "markdown-it": "^12.0.6",
+    "cssnano": "^5.0.7",
+    "highlight.js": "^11.2.0",
+    "husky": "^7.0.1",
+    "lint-staged": "^11.1.1",
+    "markdown-it": "^12.2.0",
     "markdown-it-attrs": "^4.0.0",
     "markdown-it-deflist": "^2.1.0",
-    "node-sass": "^6.0.0",
-    "postcss": "^8.3.5",
+    "node-sass": "^6.0.1",
+    "postcss": "^8.3.6",
     "postcss-cli": "^8.3.1",
-    "prettier": "^2.3.1",
-    "typedoc": "^0.20.37",
-    "typescript": "^4.2.0",
+    "prettier": "^2.3.2",
+    "typedoc": "^0.21.5",
+    "typescript": "^4.3.5",
     "update-notifier": "^5.1.0"
   },
   "prettier": "@cortex-js/prettier-config",
