--- a/package.json
+++ b/package.json
@@ -18,21 +18,18 @@
   "main": "root/index.html",
   "scripts": {
     "build": "bash scripts/build.sh",
-    "build:grok": "npm --prefix submodules/grok run build",
     "build:code-playground": "npm --prefix submodules/code-playground run dist",
-    "install:grok": "npm --prefix submodules/grok install",
     "clean": "bash scripts/clean.sh",
     "coverage": "bash scripts/test.sh --coverage",
     "deploy": "bash scripts/deploy.sh",
-    "//install": "npm install --production=false submodules/grok",
     "lint": "prettier --config config/prettierrc.yaml --ignore-path ./.prettierignore --write \"**/*.{ts,js,css,md,yml,json}\"",
     "restart": "bash scripts/restart.sh",
     "stage": "bash scripts/stage.sh",
-    "start": "bash scripts/server.sh",
+    "start": "bash scripts/start.sh",
     "test": "bash scripts/test.sh"
   },
   "engines": {
-    "node": ">=11.0"
+    "node": ">=17.0"
   },
   "browserslist": [
     "> 1%",
@@ -42,22 +39,23 @@
   "contributors": [],
   "bugs": "https://github.com/cortex-js/cortexjs.io/issues/",
   "devDependencies": {
-    "@11ty/eleventy": "^0.12.1",
-    "@cortex-js/prettier-config": "^1.1.0",
-    "@ui-js/grok": "file:submodules/grok",
-    "cssnano": "^5.0.9",
-    "highlight.js": "^11.3.1",
+    "@11ty/eleventy": "^1.0.0",
+    "@cortex-js/prettier-config": "^1.1.1",
+    "@ui-js/grok": "^1.3.1",
+    "cssnano": "^5.0.17",
+    "highlight.js": "^11.4.0",
     "husky": "^7.0.4",
-    "lint-staged": "^11.2.6",
-    "markdown-it": "^12.2.0",
-    "markdown-it-attrs": "^4.1.0",
+    "lint-staged": "^12.3.4",
+    "markdown-it": "^12.3.2",
+    "markdown-it-attrs": "^4.1.3",
     "markdown-it-deflist": "^2.1.0",
-    "node-sass": "^6.0.1",
-    "postcss": "^8.3.11",
-    "postcss-cli": "^9.0.1",
-    "prettier": "^2.4.1",
-    "typedoc": "^0.22.7",
-    "typescript": "^4.4.4",
+    "markdown-it-multimd-table": "^4.1.3",
+    "node-sass": "^7.0.1",
+    "postcss": "^8.4.6",
+    "postcss-cli": "^9.1.0",
+    "prettier": "^2.5.1",
+    "typedoc": "^0.22.12",
+    "typescript": "^4.5.5",
     "update-notifier": "^5.1.0"
   },
   "prettier": "@cortex-js/prettier-config",
@@ -71,8 +69,5 @@
       "prettier --write",
       "git add"
     ]
-  },
-  "dependencies": {
-    "markdown-it-multimd-table": "^4.1.1"
   }
 }
