--- a/package.json
+++ b/package.json
@@ -44,10 +44,12 @@
     "@cortex-js/prettier-config": "^1.1.1",
     "@ui-js/grok": "^1.8.0",
     "cssnano": "^5.1.7",
+    "eleventy-plugin-toc": "^1.1.5",
     "highlight.js": "^11.5.1",
     "husky": "^7.0.4",
     "lint-staged": "^13.0.3",
     "markdown-it": "^13.0.0",
+    "markdown-it-anchor": "^8.6.4",
     "markdown-it-attrs": "^4.1.3",
     "markdown-it-deflist": "^2.1.0",
     "markdown-it-multimd-table": "^4.1.3",
