--- a/package.json
+++ b/package.json
@@ -53,10 +53,10 @@
     "markdown-it-attrs": "^4.1.6",
     "markdown-it-deflist": "^2.1.0",
     "markdown-it-multimd-table": "^4.2.3",
-    "node-sass": "^9.0.0",
     "postcss": "^8.4.30",
     "postcss-cli": "^10.1.0",
     "prettier": "^3.0.3",
+    "sass": "^1.68.0",
     "typedoc": "^0.25.1",
     "typescript": "^5.2.2",
     "update-notifier": "^6.0.2"
